Removed loader spacing bug

--- a/scss/master.scss
+++ b/scss/master.scss
@@ -26,8 +26,18 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  -webkit-animation: pulse 2.5s infinite;
-  animation: pulse 2.5s infinite;
+
+  & div {
+    width: 26px;
+  }
+
+  & img {
+    -webkit-animation: pulse 2.5s infinite;
+    animation: pulse 2.5s infinite;
+    opacity: 0;
+    transition: opacity 2000ms ease-in;
+    position: absolute;
+  }
 }
 
 @keyframes pulse {
@@ -39,68 +49,25 @@ header {
 .intro {
   width: 100vw;
   height: 100%;
+  // max-height: calc(100vh * 10);
   z-index: 1;
   transition: background-color 50ms linear;
   background-color: #F9F7E8;
 
   .slide {
     width: 100%;
+    max-width: 100vw;
     height: 100vh;
+    max-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     // border: 1px solid #000;
 
-    .loader, .loader:after {
-      border-radius: 50%;
-      width: 10em;
-      height: 10em;
-    }
-
-    .loader {
-      font-size: 10px;
+    img {
       opacity: 0;
       transition: opacity 1500ms ease-in;
-      text-indent: -9999em;
-      border-top: 1.1em solid rgba(255, 255, 255, 0.4);
-      border-right: 1.1em solid rgba(255, 255, 255, 0.4);
-      border-bottom: 1.1em solid rgba(255, 255, 255, 0.4);
-      border-left: 1.1em solid #ffffff;
-      -webkit-transform: translateZ(0);
-      -ms-transform: translateZ(0);
-      transform: translateZ(0);
-      -webkit-animation: load8 1.1s infinite linear;
-      animation: load8 1.1s infinite linear;
-
-      &.sticky {
-        position: fixed;
-        position: fixed;
-        left: calc(50% - calc(10em / 2));
-        top: calc(45% - calc(10em / 2));
-      }
-    }
-
-    @-webkit-keyframes load8 {
-      0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-      }
-      100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-      }
-    }
-
-    @keyframes load8 {
-      0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-      }
-      100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-      }
     }
 
     p {
@@ -112,16 +79,14 @@ header {
       font-weight: 300;
       font-size: 1.7em;
 
+      &.visible {
+        opacity: 1;
+      }
+
       @media (min-width: 450px) {
         & br {
           display: none;
         }
-      }
-    }
-
-    &:nth-child(1) {
-      p, .loader {
-        opacity: 1;
       }
     }
 
